--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -38,10 +38,10 @@ jobs:
     
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: EDWIN_VARGAS
+        run: echo edwinvargasjimenez
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo FUNCIONAAAAAAAAAAAAAAAA
+          echo funcionaaaaaaaaaaaaaaaaaaaa
