--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -45,3 +45,16 @@ jobs:
         run: |
           echo Add other actions to build,
           echo funcionaaaaaaaaaaaaaaaaaaaa
+        
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
+          
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+           aws s3api list-buckets
