--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -59,7 +59,9 @@ jobs:
         run: |
            aws s3api list-buckets
            
-      - name: upload file python type named function_f_small.py
+      - name: First the repository is cloned, then the folder is accessed and the python file is searched. Finally, file python type named function_f_small.py is charged
         run: |
-            aws cp https://github.com/edwinvargas011/Ejercicio_TDD/blob/5f00e6fd2a99e3a0773eb28ca3279904bdb10843/function_f_small.py s3://bucket1tdd/
-
+            git clone https://github.com/edwinvargas011/Ejercicio_TDD.git
+            cd Ejercicio_TDD.git
+            aws cp function_f_small.py s3://bucket1tdd/
+  
