--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -61,5 +61,5 @@ jobs:
            
       - name: First the repository is cloned, then the folder is accessed and the python file is searched. Finally, file python type named function_f_small.py is charged
         run: |
-            aws cp ./function_f_small.py s3://bucket1tdd/
+            aws s3 cp ./function_f_small.py s3://bucket1tdd/
   
