--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -34,18 +34,13 @@ jobs:
           virtualenv env
           source env/bin/activate
           pip install -r requirements.txt
-          pytest
     
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo edwinvargasjimenez
+      - name: The tests are executed
+        run: pytest
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo funcionaaaaaaaaaaaaaaaaaaaa
-        
+      
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
