--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -48,4 +48,4 @@ jobs:
       - name: Deploy the resources and actions
         run: |
           pip install zappa
-          zappa undeploy dev --yes
+          zappa init
